[gd_scene load_steps=8 format=3 uid="uid://d4co5sbcgnc11"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_voptu"]
[ext_resource type="Texture2D" uid="uid://cdu8kxm4tf0s8" path="res://texures/hud_wrapper.png" id="2_1hyol"]
[ext_resource type="FontFile" uid="uid://6fadjqrs0gtm" path="res://texures/yoster.ttf" id="3_ud5vh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6riyo"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sryyb"]
bg_color = Color(0.755138, 0.302768, 0.275854, 1)
border_width_right = 10
border_color = Color(0.461557, 0.159077, 0.143095, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jb8ji"]
bg_color = Color(0.0728426, 0.0728427, 0.0728426, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vtm5"]
bg_color = Color(0.152941, 0.54902, 0.647059, 1)
border_width_right = 10
border_color = Color(0.0564363, 0.273619, 0.327173, 1)

[node name="Hud" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_voptu")

[node name="HUDPanel" type="Sprite2D" parent="."]
position = Vector2(480, 696)
texture = ExtResource("2_1hyol")

[node name="HealthBar" type="ProgressBar" parent="HUDPanel"]
offset_left = -294.0
offset_top = -19.0
offset_right = 475.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxFlat_6riyo")
theme_override_styles/fill = SubResource("StyleBoxFlat_sryyb")
value = 70.0
show_percentage = false

[node name="HealthLabel" type="RichTextLabel" parent="HUDPanel/HealthBar"]
layout_mode = 0
offset_top = -1.0
offset_right = 241.0
offset_bottom = 25.0
theme_override_fonts/normal_font = ExtResource("3_ud5vh")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = " 40 HP remaining"
scroll_active = false

[node name="WaveBar" type="ProgressBar" parent="HUDPanel"]
offset_left = -294.0
offset_top = 13.0
offset_right = 475.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_jb8ji")
theme_override_styles/fill = SubResource("StyleBoxFlat_0vtm5")
value = 70.0
show_percentage = false

[node name="WaveLabel" type="RichTextLabel" parent="HUDPanel"]
offset_left = -475.0
offset_top = -19.0
offset_right = -299.0
offset_bottom = 4.0
theme_override_fonts/normal_font = ExtResource("3_ud5vh")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Wave 1"
fit_content = true
scroll_active = false
